// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button blue button 1`] = `
<a
  className="button_1515qhr-o_O-blue_14jsc6v"
  onClick={undefined}
>
  <span
    className="text_f1191h-o_O-LabelLarge_1py5n5j"
    style={Object {}}
  >
    Hello, world!
  </span>
</a>
`;

exports[`Storyshots Button gold button 1`] = `
<a
  className="button_1515qhr-o_O-gold_tkl0uy"
  onClick={undefined}
>
  <span
    className="text_f1191h-o_O-LabelLarge_1py5n5j"
    style={Object {}}
  >
    Hello, world!
  </span>
</a>
`;

exports[`Storyshots Button green button 1`] = `
<a
  className="button_1515qhr-o_O-green_r2k60b"
  onClick={undefined}
>
  <span
    className="text_f1191h-o_O-LabelLarge_1py5n5j"
    style={Object {}}
  >
    Hello, world!
  </span>
</a>
`;

exports[`Storyshots Button red button 1`] = `
<a
  className="button_1515qhr-o_O-red_14ud0c8"
  onClick={undefined}
>
  <span
    className="text_f1191h-o_O-LabelLarge_1py5n5j"
    style={Object {}}
  >
    Hello, world!
  </span>
</a>
`;

exports[`Storyshots Color All colors 1`] = `
<div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "minHeight": 40,
      }
    }
  >
    <div
      style={
        Object {
          "paddingRight": 10,
          "textAlign": "right",
          "width": 250,
        }
      }
    >
      blue
      :
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#1865f2",
          "border": "1px solid #21242c",
          "height": 30,
          "marginRight": 10,
          "width": 30,
        }
      }
    />
    <div
      style={
        Object {
          "backgroundColor": "#ffffff",
          "color": "#1865f2",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#f7f8fa",
          "color": "#1865f2",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(33,36,44,0.64)",
          "color": "#1865f2",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#0a2a66",
          "color": "#1865f2",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "minHeight": 40,
      }
    }
  >
    <div
      style={
        Object {
          "paddingRight": 10,
          "textAlign": "right",
          "width": 250,
        }
      }
    >
      green
      :
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#00a60e",
          "border": "1px solid #21242c",
          "height": 30,
          "marginRight": 10,
          "width": 30,
        }
      }
    />
    <div
      style={
        Object {
          "backgroundColor": "#ffffff",
          "color": "#00a60e",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#f7f8fa",
          "color": "#00a60e",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(33,36,44,0.64)",
          "color": "#00a60e",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#0a2a66",
          "color": "#00a60e",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "minHeight": 40,
      }
    }
  >
    <div
      style={
        Object {
          "paddingRight": 10,
          "textAlign": "right",
          "width": 250,
        }
      }
    >
      gold
      :
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#ffb100",
          "border": "1px solid #21242c",
          "height": 30,
          "marginRight": 10,
          "width": 30,
        }
      }
    />
    <div
      style={
        Object {
          "backgroundColor": "#ffffff",
          "color": "#ffb100",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#f7f8fa",
          "color": "#ffb100",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(33,36,44,0.64)",
          "color": "#ffb100",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#0a2a66",
          "color": "#ffb100",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "minHeight": 40,
      }
    }
  >
    <div
      style={
        Object {
          "paddingRight": 10,
          "textAlign": "right",
          "width": 250,
        }
      }
    >
      red
      :
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#d92916",
          "border": "1px solid #21242c",
          "height": 30,
          "marginRight": 10,
          "width": 30,
        }
      }
    />
    <div
      style={
        Object {
          "backgroundColor": "#ffffff",
          "color": "#d92916",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#f7f8fa",
          "color": "#d92916",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(33,36,44,0.64)",
          "color": "#d92916",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#0a2a66",
          "color": "#d92916",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "minHeight": 40,
      }
    }
  >
    <div
      style={
        Object {
          "paddingRight": 10,
          "textAlign": "right",
          "width": 250,
        }
      }
    >
      offBlack
      :
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#21242c",
          "border": "1px solid #21242c",
          "height": 30,
          "marginRight": 10,
          "width": 30,
        }
      }
    />
    <div
      style={
        Object {
          "backgroundColor": "#ffffff",
          "color": "#21242c",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#f7f8fa",
          "color": "#21242c",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(33,36,44,0.64)",
          "color": "#21242c",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#0a2a66",
          "color": "#21242c",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "minHeight": 40,
      }
    }
  >
    <div
      style={
        Object {
          "paddingRight": 10,
          "textAlign": "right",
          "width": 250,
        }
      }
    >
      offBlack64
      :
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(33,36,44,0.64)",
          "border": "1px solid #21242c",
          "height": 30,
          "marginRight": 10,
          "width": 30,
        }
      }
    />
    <div
      style={
        Object {
          "backgroundColor": "#ffffff",
          "color": "rgba(33,36,44,0.64)",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#f7f8fa",
          "color": "rgba(33,36,44,0.64)",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(33,36,44,0.64)",
          "color": "rgba(33,36,44,0.64)",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#0a2a66",
          "color": "rgba(33,36,44,0.64)",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "minHeight": 40,
      }
    }
  >
    <div
      style={
        Object {
          "paddingRight": 10,
          "textAlign": "right",
          "width": 250,
        }
      }
    >
      offBlack50
      :
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(33,36,44,0.50)",
          "border": "1px solid #21242c",
          "height": 30,
          "marginRight": 10,
          "width": 30,
        }
      }
    />
    <div
      style={
        Object {
          "backgroundColor": "#ffffff",
          "color": "rgba(33,36,44,0.50)",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#f7f8fa",
          "color": "rgba(33,36,44,0.50)",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(33,36,44,0.64)",
          "color": "rgba(33,36,44,0.50)",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#0a2a66",
          "color": "rgba(33,36,44,0.50)",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "minHeight": 40,
      }
    }
  >
    <div
      style={
        Object {
          "paddingRight": 10,
          "textAlign": "right",
          "width": 250,
        }
      }
    >
      offBlack32
      :
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(33,36,44,0.32)",
          "border": "1px solid #21242c",
          "height": 30,
          "marginRight": 10,
          "width": 30,
        }
      }
    />
    <div
      style={
        Object {
          "backgroundColor": "#ffffff",
          "color": "rgba(33,36,44,0.32)",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#f7f8fa",
          "color": "rgba(33,36,44,0.32)",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(33,36,44,0.64)",
          "color": "rgba(33,36,44,0.32)",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#0a2a66",
          "color": "rgba(33,36,44,0.32)",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "minHeight": 40,
      }
    }
  >
    <div
      style={
        Object {
          "paddingRight": 10,
          "textAlign": "right",
          "width": 250,
        }
      }
    >
      offBlack16
      :
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(33,36,44,0.16)",
          "border": "1px solid #21242c",
          "height": 30,
          "marginRight": 10,
          "width": 30,
        }
      }
    />
    <div
      style={
        Object {
          "backgroundColor": "#ffffff",
          "color": "rgba(33,36,44,0.16)",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#f7f8fa",
          "color": "rgba(33,36,44,0.16)",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(33,36,44,0.64)",
          "color": "rgba(33,36,44,0.16)",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#0a2a66",
          "color": "rgba(33,36,44,0.16)",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "minHeight": 40,
      }
    }
  >
    <div
      style={
        Object {
          "paddingRight": 10,
          "textAlign": "right",
          "width": 250,
        }
      }
    >
      offBlack8
      :
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(33,36,44,0.08)",
          "border": "1px solid #21242c",
          "height": 30,
          "marginRight": 10,
          "width": 30,
        }
      }
    />
    <div
      style={
        Object {
          "backgroundColor": "#ffffff",
          "color": "rgba(33,36,44,0.08)",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#f7f8fa",
          "color": "rgba(33,36,44,0.08)",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(33,36,44,0.64)",
          "color": "rgba(33,36,44,0.08)",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#0a2a66",
          "color": "rgba(33,36,44,0.08)",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "minHeight": 40,
      }
    }
  >
    <div
      style={
        Object {
          "paddingRight": 10,
          "textAlign": "right",
          "width": 250,
        }
      }
    >
      offWhite
      :
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#f7f8fa",
          "border": "1px solid #21242c",
          "height": 30,
          "marginRight": 10,
          "width": 30,
        }
      }
    />
    <div
      style={
        Object {
          "backgroundColor": "#ffffff",
          "color": "#f7f8fa",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#f7f8fa",
          "color": "#f7f8fa",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(33,36,44,0.64)",
          "color": "#f7f8fa",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#0a2a66",
          "color": "#f7f8fa",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "minHeight": 40,
      }
    }
  >
    <div
      style={
        Object {
          "paddingRight": 10,
          "textAlign": "right",
          "width": 250,
        }
      }
    >
      white
      :
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#ffffff",
          "border": "1px solid #21242c",
          "height": 30,
          "marginRight": 10,
          "width": 30,
        }
      }
    />
    <div
      style={
        Object {
          "backgroundColor": "#ffffff",
          "color": "#ffffff",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#f7f8fa",
          "color": "#ffffff",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(33,36,44,0.64)",
          "color": "#ffffff",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#0a2a66",
          "color": "#ffffff",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "minHeight": 40,
      }
    }
  >
    <div
      style={
        Object {
          "paddingRight": 10,
          "textAlign": "right",
          "width": 250,
        }
      }
    >
      white64
      :
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(255,255,255,0.64)",
          "border": "1px solid #21242c",
          "height": 30,
          "marginRight": 10,
          "width": 30,
        }
      }
    />
    <div
      style={
        Object {
          "backgroundColor": "#ffffff",
          "color": "rgba(255,255,255,0.64)",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#f7f8fa",
          "color": "rgba(255,255,255,0.64)",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(33,36,44,0.64)",
          "color": "rgba(255,255,255,0.64)",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#0a2a66",
          "color": "rgba(255,255,255,0.64)",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "minHeight": 40,
      }
    }
  >
    <div
      style={
        Object {
          "paddingRight": 10,
          "textAlign": "right",
          "width": 250,
        }
      }
    >
      darkBlue
      :
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#0a2a66",
          "border": "1px solid #21242c",
          "height": 30,
          "marginRight": 10,
          "width": 30,
        }
      }
    />
    <div
      style={
        Object {
          "backgroundColor": "#ffffff",
          "color": "#0a2a66",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#f7f8fa",
          "color": "#0a2a66",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(33,36,44,0.64)",
          "color": "#0a2a66",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#0a2a66",
          "color": "#0a2a66",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "minHeight": 40,
      }
    }
  >
    <div
      style={
        Object {
          "paddingRight": 10,
          "textAlign": "right",
          "width": 250,
        }
      }
    >
      teal
      :
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#00e5ae",
          "border": "1px solid #21242c",
          "height": 30,
          "marginRight": 10,
          "width": 30,
        }
      }
    />
    <div
      style={
        Object {
          "backgroundColor": "#ffffff",
          "color": "#00e5ae",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#f7f8fa",
          "color": "#00e5ae",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(33,36,44,0.64)",
          "color": "#00e5ae",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#0a2a66",
          "color": "#00e5ae",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "minHeight": 40,
      }
    }
  >
    <div
      style={
        Object {
          "paddingRight": 10,
          "textAlign": "right",
          "width": 250,
        }
      }
    >
      lightBlue
      :
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#37c5fd",
          "border": "1px solid #21242c",
          "height": 30,
          "marginRight": 10,
          "width": 30,
        }
      }
    />
    <div
      style={
        Object {
          "backgroundColor": "#ffffff",
          "color": "#37c5fd",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#f7f8fa",
          "color": "#37c5fd",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(33,36,44,0.64)",
          "color": "#37c5fd",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#0a2a66",
          "color": "#37c5fd",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "minHeight": 40,
      }
    }
  >
    <div
      style={
        Object {
          "paddingRight": 10,
          "textAlign": "right",
          "width": 250,
        }
      }
    >
      pink
      :
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#fa50ae",
          "border": "1px solid #21242c",
          "height": 30,
          "marginRight": 10,
          "width": 30,
        }
      }
    />
    <div
      style={
        Object {
          "backgroundColor": "#ffffff",
          "color": "#fa50ae",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#f7f8fa",
          "color": "#fa50ae",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(33,36,44,0.64)",
          "color": "#fa50ae",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#0a2a66",
          "color": "#fa50ae",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
  </div>
</div>
`;

exports[`Storyshots Color Color Utilities 1`] = `
<div>
  <p>
    Dynamically computed colors using the 
    <code>
      fade
    </code>
     and
     
    <code>
      mix
    </code>
     methods from the color utilities.
  </p>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "minHeight": 40,
      }
    }
  >
    <div
      style={
        Object {
          "paddingRight": 10,
          "textAlign": "right",
          "width": 250,
        }
      }
    >
      White
      :
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#ffffff",
          "border": "1px solid #21242c",
          "height": 30,
          "marginRight": 10,
          "width": 30,
        }
      }
    />
    <div
      style={
        Object {
          "backgroundColor": "#ffffff",
          "color": "#ffffff",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#f7f8fa",
          "color": "#ffffff",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(33,36,44,0.64)",
          "color": "#ffffff",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#0a2a66",
          "color": "#ffffff",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "minHeight": 40,
      }
    }
  >
    <div
      style={
        Object {
          "paddingRight": 10,
          "textAlign": "right",
          "width": 250,
        }
      }
    >
      White (Tinted) = White + 16% Tint
      :
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#f9ddda",
          "border": "1px solid #21242c",
          "height": 30,
          "marginRight": 10,
          "width": 30,
        }
      }
    />
    <div
      style={
        Object {
          "backgroundColor": "#ffffff",
          "color": "#f9ddda",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#f7f8fa",
          "color": "#f9ddda",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(33,36,44,0.64)",
          "color": "#f9ddda",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#0a2a66",
          "color": "#f9ddda",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "minHeight": 40,
      }
    }
  >
    <div
      style={
        Object {
          "paddingRight": 10,
          "textAlign": "right",
          "width": 250,
        }
      }
    >
      White (XTinted) = White + 32% Tint
      :
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#f3bbb4",
          "border": "1px solid #21242c",
          "height": 30,
          "marginRight": 10,
          "width": 30,
        }
      }
    />
    <div
      style={
        Object {
          "backgroundColor": "#ffffff",
          "color": "#f3bbb4",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#f7f8fa",
          "color": "#f3bbb4",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(33,36,44,0.64)",
          "color": "#f3bbb4",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#0a2a66",
          "color": "#f3bbb4",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "minHeight": 40,
      }
    }
  >
    <div
      style={
        Object {
          "paddingRight": 10,
          "textAlign": "right",
          "width": 250,
        }
      }
    >
      White (XXTinted) = White + 64% Tint
      :
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#e7766a",
          "border": "1px solid #21242c",
          "height": 30,
          "marginRight": 10,
          "width": 30,
        }
      }
    />
    <div
      style={
        Object {
          "backgroundColor": "#ffffff",
          "color": "#e7766a",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#f7f8fa",
          "color": "#e7766a",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(33,36,44,0.64)",
          "color": "#e7766a",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#0a2a66",
          "color": "#e7766a",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "minHeight": 40,
      }
    }
  >
    <div
      style={
        Object {
          "paddingRight": 10,
          "textAlign": "right",
          "width": 250,
        }
      }
    >
      Tint
      :
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#d92916",
          "border": "1px solid #21242c",
          "height": 30,
          "marginRight": 10,
          "width": 30,
        }
      }
    />
    <div
      style={
        Object {
          "backgroundColor": "#ffffff",
          "color": "#d92916",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#f7f8fa",
          "color": "#d92916",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(33,36,44,0.64)",
          "color": "#d92916",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#0a2a66",
          "color": "#d92916",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "minHeight": 40,
      }
    }
  >
    <div
      style={
        Object {
          "paddingRight": 10,
          "textAlign": "right",
          "width": 250,
        }
      }
    >
      Tint (Light) = Tint + 16% White
      :
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#df4b3b",
          "border": "1px solid #21242c",
          "height": 30,
          "marginRight": 10,
          "width": 30,
        }
      }
    />
    <div
      style={
        Object {
          "backgroundColor": "#ffffff",
          "color": "#df4b3b",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#f7f8fa",
          "color": "#df4b3b",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(33,36,44,0.64)",
          "color": "#df4b3b",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#0a2a66",
          "color": "#df4b3b",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "minHeight": 40,
      }
    }
  >
    <div
      style={
        Object {
          "paddingRight": 10,
          "textAlign": "right",
          "width": 250,
        }
      }
    >
      Tint (Dark) = Tint + 32% Off-Black
      :
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#9e271d",
          "border": "1px solid #21242c",
          "height": 30,
          "marginRight": 10,
          "width": 30,
        }
      }
    />
    <div
      style={
        Object {
          "backgroundColor": "#ffffff",
          "color": "#9e271d",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#f7f8fa",
          "color": "#9e271d",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(33,36,44,0.64)",
          "color": "#9e271d",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#0a2a66",
          "color": "#9e271d",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "minHeight": 40,
      }
    }
  >
    <div
      style={
        Object {
          "paddingRight": 10,
          "textAlign": "right",
          "width": 250,
        }
      }
    >
      Tint (Dark) on Tint = Tint + 32% (Tint + 32% Off-Black)
      :
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#c62818",
          "border": "1px solid #21242c",
          "height": 30,
          "marginRight": 10,
          "width": 30,
        }
      }
    />
    <div
      style={
        Object {
          "backgroundColor": "#ffffff",
          "color": "#c62818",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#f7f8fa",
          "color": "#c62818",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(33,36,44,0.64)",
          "color": "#c62818",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#0a2a66",
          "color": "#c62818",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "minHeight": 40,
      }
    }
  >
    <div
      style={
        Object {
          "paddingRight": 10,
          "textAlign": "right",
          "width": 250,
        }
      }
    >
      Tint (Dark) on White = White + 16% (Tint + 32% Off-Black)
      :
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#efdcdb",
          "border": "1px solid #21242c",
          "height": 30,
          "marginRight": 10,
          "width": 30,
        }
      }
    />
    <div
      style={
        Object {
          "backgroundColor": "#ffffff",
          "color": "#efdcdb",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#f7f8fa",
          "color": "#efdcdb",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(33,36,44,0.64)",
          "color": "#efdcdb",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#0a2a66",
          "color": "#efdcdb",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "minHeight": 40,
      }
    }
  >
    <div
      style={
        Object {
          "paddingRight": 10,
          "textAlign": "right",
          "width": 250,
        }
      }
    >
      Off-Black
      :
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#21242c",
          "border": "1px solid #21242c",
          "height": 30,
          "marginRight": 10,
          "width": 30,
        }
      }
    />
    <div
      style={
        Object {
          "backgroundColor": "#ffffff",
          "color": "#21242c",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#f7f8fa",
          "color": "#21242c",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(33,36,44,0.64)",
          "color": "#21242c",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#0a2a66",
          "color": "#21242c",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "minHeight": 40,
      }
    }
  >
    <div
      style={
        Object {
          "paddingRight": 10,
          "textAlign": "right",
          "width": 250,
        }
      }
    >
      Dark Gray
      :
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#717378",
          "border": "1px solid #21242c",
          "height": 30,
          "marginRight": 10,
          "width": 30,
        }
      }
    />
    <div
      style={
        Object {
          "backgroundColor": "#ffffff",
          "color": "#717378",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#f7f8fa",
          "color": "#717378",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(33,36,44,0.64)",
          "color": "#717378",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#0a2a66",
          "color": "#717378",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "minHeight": 40,
      }
    }
  >
    <div
      style={
        Object {
          "paddingRight": 10,
          "textAlign": "right",
          "width": 250,
        }
      }
    >
      Light Gray
      :
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#b8b9bb",
          "border": "1px solid #21242c",
          "height": 30,
          "marginRight": 10,
          "width": 30,
        }
      }
    />
    <div
      style={
        Object {
          "backgroundColor": "#ffffff",
          "color": "#b8b9bb",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#f7f8fa",
          "color": "#b8b9bb",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(33,36,44,0.64)",
          "color": "#b8b9bb",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#0a2a66",
          "color": "#b8b9bb",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
  </div>
</div>
`;

exports[`Storyshots Core all 1`] = `
<div>
  <span
    className="text_f1191h"
    style={Object {}}
  >
    Text
  </span>
  <div
    className=""
    style={Object {}}
  >
    View
  </div>
</div>
`;

exports[`Storyshots Core nested text inherits color 1`] = `
<div>
  <div
    className="blue_1tsdo2i"
    style={Object {}}
  >
    <span
      className="text_f1191h"
      style={Object {}}
    >
      Text
    </span>
  </div>
</div>
`;

exports[`Storyshots Core/Text aphrodite styles 1`] = `
<span
  className="text_f1191h-o_O-pink_th4aeu"
  style={Object {}}
>
  Text
</span>
`;

exports[`Storyshots Core/Text multiple Aphrodite styles 1`] = `
<span
  className="text_f1191h-o_O-pink_th4aeu-o_O-bold_hq5slr"
  style={Object {}}
>
  Text
</span>
`;

exports[`Storyshots Core/Text multiple text elements 1`] = `
<div>
  <span
    className="text_f1191h-o_O-bold_hq5slr"
    style={Object {}}
  >
    Text
  </span>
  <span
    className="text_f1191h-o_O-pink_th4aeu"
    style={Object {}}
  >
    Text
  </span>
</div>
`;

exports[`Storyshots Core/Text text 1`] = `
<span
  className="text_f1191h"
  style={Object {}}
>
  Text
</span>
`;

exports[`Storyshots Core/View aphrodite styles 1`] = `
<div
  className="pink_th4aeu"
  style={Object {}}
>
  View
</div>
`;

exports[`Storyshots Core/View multiple Aphrodite styles 1`] = `
<div
  className="pink_th4aeu-o_O-bold_hq5slr"
  style={Object {}}
>
  Text
</div>
`;

exports[`Storyshots Core/View multiple view elements 1`] = `
<div>
  <div
    className="bold_hq5slr"
    style={Object {}}
  >
    Text
  </div>
  <div
    className="pink_th4aeu"
    style={Object {}}
  >
    Text
  </div>
</div>
`;

exports[`Storyshots Core/View view 1`] = `
<div
  className=""
  style={Object {}}
>
  View
</div>
`;

exports[`Storyshots Typography all 1`] = `
<div>
  <h1
    className="text_f1191h-o_O-header_1sc4ubv-o_O-Title_ms2740"
    style={Object {}}
  >
    Title
  </h1>
  <span
    className="text_f1191h-o_O-Tagline_l6egb9"
    style={Object {}}
  >
    Tagline
  </span>
  <h2
    className="text_f1191h-o_O-header_1sc4ubv-o_O-HeadingLarge_1fsnykj"
    style={Object {}}
  >
    HeadingLarge
  </h2>
  <h3
    className="text_f1191h-o_O-header_1sc4ubv-o_O-HeadingMedium_1dhg170"
    style={Object {}}
  >
    HeadingMedium
  </h3>
  <h4
    className="text_f1191h-o_O-header_1sc4ubv-o_O-HeadingSmall_sfjk2e"
    style={Object {}}
  >
    HeadingSmall
  </h4>
  <h4
    className="text_f1191h-o_O-header_1sc4ubv-o_O-HeadingXSmall_1owftwm"
    style={Object {}}
  >
    HeadingXSmall
  </h4>
  <span
    className="text_f1191h-o_O-BodySerifBlock_145unc6"
    style={Object {}}
  >
    BodySerifBlock
  </span>
  <span
    className="text_f1191h-o_O-BodySerif_1hczmt"
    style={Object {}}
  >
    BodySerif
  </span>
  <span
    className="text_f1191h-o_O-BodyMonospace_1xc1y8w"
    style={Object {}}
  >
    BodyMonospace
  </span>
  <span
    className="text_f1191h-o_O-Body_1k617xy"
    style={Object {}}
  >
    Body
  </span>
  <span
    className="text_f1191h-o_O-LabelLarge_1py5n5j"
    style={Object {}}
  >
    LabelLarge
  </span>
  <span
    className="text_f1191h-o_O-LabelMedium_1dopp6c"
    style={Object {}}
  >
    LabelMedium
  </span>
  <span
    className="text_f1191h-o_O-LabelSmall_zytyd9"
    style={Object {}}
  >
    LabelSmall
  </span>
  <span
    className="text_f1191h-o_O-LabelXSmall_kib3ed"
    style={Object {}}
  >
    LabelXSmall
  </span>
  <span
    className="text_f1191h-o_O-Caption_1bahyye"
    style={Object {}}
  >
    Caption
  </span>
  <span
    className="text_f1191h-o_O-Footnote_1m8k62j"
    style={Object {}}
  >
    Footnote
  </span>
</div>
`;

exports[`Storyshots Typography/Body as an h5 tag 1`] = `
<h5
  className="text_f1191h-o_O-header_1sc4ubv-o_O-Body_1k617xy"
  style={Object {}}
>
  Body
</h5>
`;

exports[`Storyshots Typography/Body default 1`] = `
<span
  className="text_f1191h-o_O-Body_1k617xy"
  style={Object {}}
>
  Body
</span>
`;

exports[`Storyshots Typography/Body light on dark 1`] = `
<span
  className="text_f1191h-o_O-Body_1k617xy-o_O-lightOnDark_1y4oyso"
  style={Object {}}
>
  Body
</span>
`;

exports[`Storyshots Typography/BodyMonospace as an h5 tag 1`] = `
<h5
  className="text_f1191h-o_O-header_1sc4ubv-o_O-BodyMonospace_1xc1y8w"
  style={Object {}}
>
  BodyMonospace
</h5>
`;

exports[`Storyshots Typography/BodyMonospace default 1`] = `
<span
  className="text_f1191h-o_O-BodyMonospace_1xc1y8w"
  style={Object {}}
>
  BodyMonospace
</span>
`;

exports[`Storyshots Typography/BodyMonospace light on dark 1`] = `
<span
  className="text_f1191h-o_O-BodyMonospace_1xc1y8w-o_O-lightOnDark_1y4oyso"
  style={Object {}}
>
  BodyMonospace
</span>
`;

exports[`Storyshots Typography/BodySerif as an h5 tag 1`] = `
<h5
  className="text_f1191h-o_O-header_1sc4ubv-o_O-BodySerif_1hczmt"
  style={Object {}}
>
  BodySerif
</h5>
`;

exports[`Storyshots Typography/BodySerif default 1`] = `
<span
  className="text_f1191h-o_O-BodySerif_1hczmt"
  style={Object {}}
>
  BodySerif
</span>
`;

exports[`Storyshots Typography/BodySerif light on dark 1`] = `
<span
  className="text_f1191h-o_O-BodySerif_1hczmt-o_O-lightOnDark_1y4oyso"
  style={Object {}}
>
  BodySerif
</span>
`;

exports[`Storyshots Typography/BodySerifBlock as an h5 tag 1`] = `
<h5
  className="text_f1191h-o_O-header_1sc4ubv-o_O-BodySerifBlock_145unc6"
  style={Object {}}
>
  BodySerifBlock
</h5>
`;

exports[`Storyshots Typography/BodySerifBlock default 1`] = `
<span
  className="text_f1191h-o_O-BodySerifBlock_145unc6"
  style={Object {}}
>
  BodySerifBlock
</span>
`;

exports[`Storyshots Typography/BodySerifBlock light on dark 1`] = `
<span
  className="text_f1191h-o_O-BodySerifBlock_145unc6-o_O-lightOnDark_1y4oyso"
  style={Object {}}
>
  BodySerifBlock
</span>
`;

exports[`Storyshots Typography/Caption as an h5 tag 1`] = `
<h5
  className="text_f1191h-o_O-header_1sc4ubv-o_O-Caption_1bahyye"
  style={Object {}}
>
  Caption
</h5>
`;

exports[`Storyshots Typography/Caption default 1`] = `
<span
  className="text_f1191h-o_O-Caption_1bahyye"
  style={Object {}}
>
  Caption
</span>
`;

exports[`Storyshots Typography/Caption light on dark 1`] = `
<span
  className="text_f1191h-o_O-Caption_1bahyye-o_O-lightOnDark_1y4oyso"
  style={Object {}}
>
  Caption
</span>
`;

exports[`Storyshots Typography/Footnote as an h5 tag 1`] = `
<h5
  className="text_f1191h-o_O-header_1sc4ubv-o_O-Footnote_1m8k62j"
  style={Object {}}
>
  Footnote
</h5>
`;

exports[`Storyshots Typography/Footnote default 1`] = `
<span
  className="text_f1191h-o_O-Footnote_1m8k62j"
  style={Object {}}
>
  Footnote
</span>
`;

exports[`Storyshots Typography/Footnote light on dark 1`] = `
<span
  className="text_f1191h-o_O-Footnote_1m8k62j-o_O-lightOnDark_1y4oyso"
  style={Object {}}
>
  Footnote
</span>
`;

exports[`Storyshots Typography/HeadingLarge as an h5 tag 1`] = `
<h5
  className="text_f1191h-o_O-header_1sc4ubv-o_O-HeadingLarge_1fsnykj"
  style={Object {}}
>
  HeadingLarge
</h5>
`;

exports[`Storyshots Typography/HeadingLarge default 1`] = `
<h2
  className="text_f1191h-o_O-header_1sc4ubv-o_O-HeadingLarge_1fsnykj"
  style={Object {}}
>
  HeadingLarge
</h2>
`;

exports[`Storyshots Typography/HeadingLarge light on dark 1`] = `
<h2
  className="text_f1191h-o_O-header_1sc4ubv-o_O-HeadingLarge_1fsnykj-o_O-lightOnDark_1y4oyso"
  style={Object {}}
>
  HeadingLarge
</h2>
`;

exports[`Storyshots Typography/HeadingMedium as an h5 tag 1`] = `
<h5
  className="text_f1191h-o_O-header_1sc4ubv-o_O-HeadingMedium_1dhg170"
  style={Object {}}
>
  HeadingMedium
</h5>
`;

exports[`Storyshots Typography/HeadingMedium default 1`] = `
<h3
  className="text_f1191h-o_O-header_1sc4ubv-o_O-HeadingMedium_1dhg170"
  style={Object {}}
>
  HeadingMedium
</h3>
`;

exports[`Storyshots Typography/HeadingMedium light on dark 1`] = `
<h3
  className="text_f1191h-o_O-header_1sc4ubv-o_O-HeadingMedium_1dhg170-o_O-lightOnDark_1y4oyso"
  style={Object {}}
>
  HeadingMedium
</h3>
`;

exports[`Storyshots Typography/HeadingSmall as an h5 tag 1`] = `
<h5
  className="text_f1191h-o_O-header_1sc4ubv-o_O-HeadingSmall_sfjk2e"
  style={Object {}}
>
  HeadingSmall
</h5>
`;

exports[`Storyshots Typography/HeadingSmall default 1`] = `
<h4
  className="text_f1191h-o_O-header_1sc4ubv-o_O-HeadingSmall_sfjk2e"
  style={Object {}}
>
  HeadingSmall
</h4>
`;

exports[`Storyshots Typography/HeadingSmall light on dark 1`] = `
<h4
  className="text_f1191h-o_O-header_1sc4ubv-o_O-HeadingSmall_sfjk2e-o_O-lightOnDark_1y4oyso"
  style={Object {}}
>
  HeadingSmall
</h4>
`;

exports[`Storyshots Typography/HeadingXSmall as an h5 tag 1`] = `
<h5
  className="text_f1191h-o_O-header_1sc4ubv-o_O-HeadingXSmall_1owftwm"
  style={Object {}}
>
  HeadingXSmall
</h5>
`;

exports[`Storyshots Typography/HeadingXSmall default 1`] = `
<h4
  className="text_f1191h-o_O-header_1sc4ubv-o_O-HeadingXSmall_1owftwm"
  style={Object {}}
>
  HeadingXSmall
</h4>
`;

exports[`Storyshots Typography/HeadingXSmall light on dark 1`] = `
<h4
  className="text_f1191h-o_O-header_1sc4ubv-o_O-HeadingXSmall_1owftwm-o_O-lightOnDark_1y4oyso"
  style={Object {}}
>
  HeadingXSmall
</h4>
`;

exports[`Storyshots Typography/LabelLarge as an h5 tag 1`] = `
<h5
  className="text_f1191h-o_O-header_1sc4ubv-o_O-LabelLarge_1py5n5j"
  style={Object {}}
>
  LabelLarge
</h5>
`;

exports[`Storyshots Typography/LabelLarge default 1`] = `
<span
  className="text_f1191h-o_O-LabelLarge_1py5n5j"
  style={Object {}}
>
  LabelLarge
</span>
`;

exports[`Storyshots Typography/LabelLarge light on dark 1`] = `
<span
  className="text_f1191h-o_O-LabelLarge_1py5n5j-o_O-lightOnDark_1y4oyso"
  style={Object {}}
>
  LabelLarge
</span>
`;

exports[`Storyshots Typography/LabelMedium as an h5 tag 1`] = `
<h5
  className="text_f1191h-o_O-header_1sc4ubv-o_O-LabelMedium_1dopp6c"
  style={Object {}}
>
  LabelMedium
</h5>
`;

exports[`Storyshots Typography/LabelMedium default 1`] = `
<span
  className="text_f1191h-o_O-LabelMedium_1dopp6c"
  style={Object {}}
>
  LabelMedium
</span>
`;

exports[`Storyshots Typography/LabelMedium light on dark 1`] = `
<span
  className="text_f1191h-o_O-LabelMedium_1dopp6c-o_O-lightOnDark_1y4oyso"
  style={Object {}}
>
  LabelMedium
</span>
`;

exports[`Storyshots Typography/LabelSmall as an h5 tag 1`] = `
<h5
  className="text_f1191h-o_O-header_1sc4ubv-o_O-LabelSmall_zytyd9"
  style={Object {}}
>
  LabelSmall
</h5>
`;

exports[`Storyshots Typography/LabelSmall default 1`] = `
<span
  className="text_f1191h-o_O-LabelSmall_zytyd9"
  style={Object {}}
>
  LabelSmall
</span>
`;

exports[`Storyshots Typography/LabelSmall light on dark 1`] = `
<span
  className="text_f1191h-o_O-LabelSmall_zytyd9-o_O-lightOnDark_1y4oyso"
  style={Object {}}
>
  LabelSmall
</span>
`;

exports[`Storyshots Typography/LabelXSmall as an h5 tag 1`] = `
<h5
  className="text_f1191h-o_O-header_1sc4ubv-o_O-LabelXSmall_kib3ed"
  style={Object {}}
>
  LabelXSmall
</h5>
`;

exports[`Storyshots Typography/LabelXSmall default 1`] = `
<span
  className="text_f1191h-o_O-LabelXSmall_kib3ed"
  style={Object {}}
>
  LabelXSmall
</span>
`;

exports[`Storyshots Typography/LabelXSmall light on dark 1`] = `
<span
  className="text_f1191h-o_O-LabelXSmall_kib3ed-o_O-lightOnDark_1y4oyso"
  style={Object {}}
>
  LabelXSmall
</span>
`;

exports[`Storyshots Typography/Tagline as an h5 tag 1`] = `
<h5
  className="text_f1191h-o_O-header_1sc4ubv-o_O-Tagline_l6egb9"
  style={Object {}}
>
  Tagline
</h5>
`;

exports[`Storyshots Typography/Tagline default 1`] = `
<span
  className="text_f1191h-o_O-Tagline_l6egb9"
  style={Object {}}
>
  Tagline
</span>
`;

exports[`Storyshots Typography/Tagline light on dark 1`] = `
<span
  className="text_f1191h-o_O-Tagline_l6egb9-o_O-lightOnDark_1y4oyso"
  style={Object {}}
>
  Tagline
</span>
`;

exports[`Storyshots Typography/Title as an h5 tag 1`] = `
<h5
  className="text_f1191h-o_O-header_1sc4ubv-o_O-Title_ms2740"
  style={Object {}}
>
  Title
</h5>
`;

exports[`Storyshots Typography/Title default 1`] = `
<h1
  className="text_f1191h-o_O-header_1sc4ubv-o_O-Title_ms2740"
  style={Object {}}
>
  Title
</h1>
`;

exports[`Storyshots Typography/Title light on dark 1`] = `
<h1
  className="text_f1191h-o_O-header_1sc4ubv-o_O-Title_ms2740-o_O-lightOnDark_1y4oyso"
  style={Object {}}
>
  Title
</h1>
`;
